--- a/src/components/video/video-player.scss
+++ b/src/components/video/video-player.scss
@@ -23,6 +23,11 @@
   margin:auto;
 }
 
+.story-video-local {
+  max-width: 100%;
+  height: auto;
+}
+
 .story-header-video {
   .story-video-container {
     width: 100%;
