--- a/src/style.scss
+++ b/src/style.scss
@@ -104,6 +104,22 @@ a {
   margin-top: 5px;
 }
 
+.story-media-image {
+  position: relative;
+  padding-bottom: 66.66%; //56.25%
+  padding-top: 0;
+  height: 0;
+  overflow: hidden;
+}
+
+.story-media-image-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: $bp-large) {
   .story-container {
     padding: 0 20vw 0 20vw;
