--- a/src/components/header/header-image-slideshow.scss
+++ b/src/components/header/header-image-slideshow.scss
@@ -1,4 +1,4 @@
-.story-header-image-slideshow{
+.story-header-image-slideshow {
   width: 100%;
   height: 100%;
   -webkit-background-size: cover;
@@ -6,10 +6,12 @@
   -o-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat;
+}
+/*
 
-  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 3s; /* Firefox < 16 */
-  -o-animation: fadein 3s; /* Opera < 12.1 */
+  -webkit-animation: fadein 3s; !* Safari, Chrome and Opera > 12.1 *!
+  -moz-animation: fadein 3s; !* Firefox < 16 *!
+  -o-animation: fadein 3s; !* Opera < 12.1 *!
   animation: fadein 3s;
   transition-timing-function: ease-in-out;
 }
@@ -19,26 +21,27 @@
   to   { opacity: 1; }
 }
 
-/* Firefox < 16 */
+!* Firefox < 16 *!
 @-moz-keyframes fadein {
   from { opacity: .2; }
   to   { opacity: 1; }
 }
 
-/* Safari, Chrome and Opera > 12.1 */
+!* Safari, Chrome and Opera > 12.1 *!
 @-webkit-keyframes fadein {
   from { opacity: .2; }
   to   { opacity: 1; }
 }
 
-/* Internet Explorer */
+!* Internet Explorer *!
 @-ms-keyframes fadein {
   from { opacity: .2; }
   to   { opacity: 1; }
 }
 
-/* Opera < 12.1 */
+!* Opera < 12.1 *!
 @-o-keyframes fadein {
   from { opacity: .2; }
   to   { opacity: 1; }
 }
+*/
